// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Equation Functions - Fraction Nested Fractions 1`] = `
Array [
  0.35,
  0,
  0,
  0.0525,
  0,
  0.35,
  0,
  0.1936,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Fraction Nested Fractions 2`] = `
Array [
  0.35,
  0,
  0,
  0.0525,
  0,
  0.35,
  0,
  0.0968,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Fraction Nested Fractions 3`] = `
Array [
  0.7,
  0,
  0,
  0.035,
  0,
  0.7,
  0,
  -0.0525,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Fraction Nested Fractions 4`] = `
Array [
  0.07,
  0,
  0,
  0.035,
  0,
  0.01,
  0,
  0.1633,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Fraction Nested Fractions 5`] = `
Array [
  0.14,
  0,
  0,
  0,
  0,
  0.01,
  0,
  0.049,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;
